<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    tools:context=".ui.auth.RegistroActivity">

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="250dp"
        android:layout_height="105dp"
        app:srcCompat="@drawable/ic_logo_minitwitter_white"
        tools:ignore="ContentDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/edtNomUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_usuario"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imagen"
        app:layout_constraintStart_toStartOf="@id/imagen"
        app:layout_constraintEnd_toEndOf="@id/imagen"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/edtCorreoRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edtNomUsuario"
        app:layout_constraintStart_toStartOf="@id/edtNomUsuario"
        app:layout_constraintEnd_toEndOf="@id/edtNomUsuario"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/edtContrasenaRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edtCorreoRegistro"
        app:layout_constraintStart_toStartOf="@id/edtCorreoRegistro"
        app:layout_constraintEnd_toEndOf="@id/edtCorreoRegistro"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/registro"
        android:textColor="@color/azul"
        app:layout_constraintTop_toBottomOf="@id/edtContrasenaRegistro"
        app:layout_constraintStart_toStartOf="@id/edtContrasenaRegistro"
        app:layout_constraintEnd_toEndOf="@id/edtContrasenaRegistro"
        android:layout_marginTop="24dp"  />

    <TextView
        android:id="@+id/iniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/btnRegistrar"
        app:layout_constraintStart_toStartOf="@id/btnRegistrar"
        app:layout_constraintEnd_toEndOf="@id/btnRegistrar"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>