<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    tools:context=".ui.auth.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="105dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_minitwitter_white"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edtCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:layout_marginTop="64dp"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/edtCorreo"
        app:layout_constraintStart_toStartOf="@id/edtCorreo"
        app:layout_constraintTop_toBottomOf="@id/edtCorreo" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/entrar"
        android:layout_marginTop="32dp"
        android:textColor="@color/azul"
        app:layout_constraintEnd_toEndOf="@id/contrasena"
        app:layout_constraintStart_toStartOf="@id/contrasena"
        app:layout_constraintTop_toBottomOf="@id/contrasena" />

    <TextView
        android:id="@+id/txtRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEntrar" />

</androidx.constraintlayout.widget.ConstraintLayout>